# myshell-secure

./: README.md  SECURITY.md  pyproject.toml
test/: old_script-DONT-USE!!.py
